Modificación en la relación entre person y user